src/objects/Bank_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Branch_No__c</fullName>
        <label>Bank Branch No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Code__c</fullName>
        <label>Bank Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_No__c</fullName>
        <label>Bank No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>UK</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <label>Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Bank Detail</label>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>